--- a/HMS/frontend/package.json
+++ b/HMS/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
     "framer-motion": "^12.11.3",
+    "nstall": "^0.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
